--- a/CalcolatoreTempiGara.html
+++ b/CalcolatoreTempiGara.html
@@ -21,7 +21,8 @@ in cui d1 e t1 sono rispettivamente la distanza corsa e il tempo impiegato a per
 </table>
 <div class="spuntaSesso">
 <input type="radio" value="male" name="sesso1" checked="checked">Maschio</input><input type="radio" value="female" name="sesso1">Femmina</input>
-<button onclick="calcolaTempi()">Calcola</button>
+</div>
+<div class="illustrazione"><button onclick="calcolaTempi()">Calcola</button>
 </div>
 <br>
 <table>
@@ -60,14 +61,15 @@ in cui d1 e t1 sono rispettivamente la distanza corsa e il tempo impiegato a per
 <option value="5000m">5000m</option>
 <option value="10000m">10000m</option>
 </select></td>
-<td><input type="text" id= "tempo"></td></tr>
+<td><input type="text" id="tempo"></td></tr>
 </tbody>
 </table>
 <div class="spuntaSesso">
 <input type="radio" value="male" name="sesso2" checked="checked">Maschio</input><input type="radio" value="female" name="sesso2">Femmina</input>
 </div>
-<div class="illustrazione"><button onclick="calcolaTempiConRecord()">Calcola</button><p id="percentualeRecord">Percentuale del record del mondo:</p>
+<div class="illustrazione"><button onclick="calcolaTempiConRecord()">Calcola</button>
 </div>
+<p id="percentualeRecord">Percentuale del record del mondo:</p>
 <br>
 <table>
 <thead>
